[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/areas/Area2D.gd" id="1"]

[node name="Area2D" type="Node2D"]
script = ExtResource("1")

[node name="VisualLayer" type="Node2D" parent="."]

[node name="NPCContainer" type="Node2D" parent="."]

[node name="POIContainer" type="Node2D" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]

[node name="TransitionPoints" type="Node2D" parent="."]

[node name="AreaBounds" type="Area2D" parent="."]

[node name="AreaBoundsCollision" type="CollisionShape2D" parent="AreaBounds"]